--- a/src/test/resources/data.properties
+++ b/src/test/resources/data.properties
@@ -1,8 +1,16 @@
 test_env = local
 #test_env = remote
 
+# login
 baseUrl = https://www.favbet.ua/en/
 email = 12.mjolnir@gmail.com
 password = 123Qwe321
 
+# sports
 stake = 100
+
+# results
+
+resultsDate = AUGUST 2025
+resultsDay = 30
+sportName = Tennis
